--- a/src/main/webapp/pages/farmacia/medicamento/medicamento.xhtml
+++ b/src/main/webapp/pages/farmacia/medicamento/medicamento.xhtml
@@ -68,8 +68,9 @@
                                                      effect="fade" var="m" styleClass="xLarge" >  
                                         <f:selectItem itemLabel="#{messages['common.choice']}" itemValue="" />  
                                         <f:selectItem itemLabel="Ampollas" itemValue="Ampollas" />  
-                                        <f:selectItem itemLabel="Pastillas" itemValue="Pastillas" />  
+                                        <f:selectItem itemLabel="Pastillas" itemValue="Pastillas" />                                          
                                         <f:selectItem itemLabel="Cápsulas" itemValue="Cápsulas" />
+                                        <f:selectItem itemLabel="Tabletas" itemValue="Tabletas" />  
                                         <f:selectItem itemLabel="Sobres" itemValue="Sobres" />  
                                         <f:selectItem itemLabel="Jarabe" itemValue="Jarabe" />                              
                                         <f:selectItem itemLabel="Crema" itemValue="Crema" />  
