--- a/src/main/webapp/pages/labClinico/listaPedidosExam.xhtml
+++ b/src/main/webapp/pages/labClinico/listaPedidosExam.xhtml
@@ -65,6 +65,7 @@
                              paginator="true" rows="20" paginatorPosition="top"
                              paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {RowsPerPageDropdown} {NextPageLink} {LastPageLink} "
                              rowsPerPageTemplate="5,10,20,50,100" 
+                             resizableColumns="true" liveResize="true"
                              lazy="true" rendered="true" selectionMode="single"
                              rowKey="#{object_.id}" selection="#{pedidoExamenListaServicio.pedidoExamenSeleccionado}">
                     <!--widgetVar="medTable" filteredValue="# {examenLabListaServicio.resultList}"
