--- a/src/main/webapp/pages/secretaria/lista.xhtml
+++ b/src/main/webapp/pages/secretaria/lista.xhtml
@@ -96,7 +96,7 @@
                          paginatorPosition="top"
                          paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {RowsPerPageDropdown} {NextPageLink} {LastPageLink} "
                          rowsPerPageTemplate="10,20,30,50,100"
-                         lazy="true"
+                         lazy="true" resizableColumns="true" liveResize="true"
                          rowKey="#{paciente_.id}"
                          selection="#{pacienteListaServicio.pacienteSelecionado}"
                          rendered="true"
