--- a/src/main/webapp/pages/farmacia/receta/listaReceta.xhtml
+++ b/src/main/webapp/pages/farmacia/receta/listaReceta.xhtml
@@ -54,8 +54,8 @@
                     </p:commandButton>
                     &nbsp;&nbsp;
                     <h:commandLink id="button-print" value="#{messages['common.print']}" styleClass="btn primary" action="#{reporteReceta.renderReceta()}" 
-                                   disabled="#{empty recetaListaServicio.recetaSeleccionada}" >                       
-                        <f:setPropertyActionListener value="#{recetaListaServicio.recetaSeleccionada}" target="#{reporteReceta.receta}"/>
+                                   disabled="#{empty recetaListaServicio.recetaSeleccionada}" actionListener="#{recetaListaServicio.entregarReceta()}">
+                        <f:setPropertyActionListener value="#{recetaListaServicio.recetaSeleccionada}" target="#{reporteReceta.receta}"/>                        
                     </h:commandLink>
 
                     <div style="float: right; " >
@@ -67,35 +67,37 @@
                     </div>
                 </div>                
                 <p:dataTable id="tablaRecetas"  var="receta_" value="#{recetaListaServicio.resultList}"
-                             paginator="true" rows="20"  paginatorPosition="top"
+                             paginator="true" rows="20"  paginatorPosition="top" style="width: 100%"
+                             resizableColumns="true" liveResize="true"
                              paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {RowsPerPageDropdown} {NextPageLink} {LastPageLink} "
                              rowsPerPageTemplate="5,10,20,50,100"
                              lazy="true" rowKey="#{receta_.id}"
                              selection="#{recetaListaServicio.recetaSeleccionada}"                             
                              selectionMode="single">
                     <!--Acciones Ajax, que me permiten seleccionar y desseleccionar un paciente-->
+                    <p:ajax event="colResize" />
                     <p:ajax event="rowSelect" listener="#{recetaListaServicio.onRowSelect}"
                             update=":form:button-edit :form:messages :form:button-print :edit-dialog"/>   
                     <p:ajax event="rowUnselect" listener="#{recetaListaServicio.onRowUnselect}" 
                             update=":form:button-edit :form:messages :form:button-print :edit-dialog"/>
                     <!--Columnas para mostrar en la tabla-->
 
-                    <p:column sortBy="#{receta_.id}" style="width: 10%; text-align: center;">
+                    <p:column sortBy="#{receta_.id}" style="width: 7%; text-align: center;">
                         <f:facet name="header">  
                             <h:outputText value="#{messages['receta.numero']}" />  
                         </f:facet>  
                         <h:outputText value="#{receta_.numvalue}" />
 
                     </p:column>
-                    <p:column sortBy="#{receta_.paciente.nombres}" style="text-align: center;">
+                    <p:column sortBy="#{receta_.paciente.nombres}" style="width: 15%; text-align: center;">
                         <f:facet name="header">  
                             <h:outputText value="Paciente" />  
                         </f:facet> 
                         <h:outputText value="#{receta_.paciente.nombres}" />
-                        &nbsp;&nbsp;
+                        &nbsp;
                         <h:outputText value="#{receta_.paciente.apellidos}" />
                     </p:column>
-                    <p:column sortBy="#{receta_.fechaEmision}" style="text-align: center; width: 12%">
+                    <p:column sortBy="#{receta_.fechaEmision}" style="text-align: center; width: 8%">
                         <f:facet name="header">  
                             <h:outputText value="#{messages['fechaReceta.fechaEmision']}" />  
                         </f:facet> 
@@ -103,7 +105,7 @@
                             <f:convertDateTime locale="es" pattern="dd-MMM-yyyy"/>
                         </h:outputText>                        
                     </p:column>                   
-                    <p:column sortBy="#{receta_.fechaEntrega}" style="text-align: center; width: 12%">
+                    <p:column sortBy="#{receta_.fechaEntrega}" style="text-align: center; width: 8%">
                         <f:facet name="header">  
                             <h:outputText value="#{messages['fechaReceta.fechaEntrega']}" />  
                         </f:facet> 
@@ -111,20 +113,20 @@
                             <f:convertDateTime locale="es" pattern="dd-MMM-yyyy"/>
                         </h:outputText>                        
                     </p:column>
-                    <p:column sortBy="#{receta_.responsableEmision}" style="text-align: center;">
+                    <p:column sortBy="#{receta_.responsableEmision}" style="text-align: center;  width: 10%">
                         <f:facet name="header">  
                             <h:outputText value="R. Emisión" title="#{messages['receta.responsableEmision']}" />  
                         </f:facet>                         
                         <h:outputText value="#{receta_.responsableEmision.fullName}" />                            
                     </p:column>
 
-                    <p:column sortBy="#{receta_.responsableEntrega}" style="text-align: center;">
+                    <p:column sortBy="#{receta_.responsableEntrega}" style="text-align: center;  width: 10%">
                         <f:facet name="header">  
                             <h:outputText  value="R. Entrega"  title="#{messages['receta.responsableEntrega']}" />  
                         </f:facet> 
                         <h:outputText value="#{receta_.responsableEntrega.fullName}" />                        
                     </p:column>
-                    <p:column sortBy="#{receta_.estado}" style="text-align: center; width: 6%">
+                    <p:column sortBy="#{receta_.estado}" style="text-align: center; width: 4% ">
                         <f:facet name="header">  
                             <h:outputText value="#{messages['comun.estado']}" />  
                         </f:facet> 
